2013-07-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/stm8/gen.c:
	  More efficient long and long long shifts by small contants.

2013-07-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/stm8/gen.c,
	  support/regression/tests/compare.c:
	  Fix handling of comparisons to immediates for stm8.

2013-07-18 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/_mullong.c:
	  Use 16x16 multiplication instead of 8x8 where faster; patch #133 by Marco Bodrato.

2013-07-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCClrange.c,
	  support/regression/tests/bug-2197.c:
	  Fix handling of pointer write in live-range splitting, fixing bug #2197.

2013-07-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc.c,
	  src/z80/ralloc2.cc,
	  support/regression/tests/bug-2195.c,
	  src/hc08/ralloc.c,
	  src/hc08/ralloc2.cc:
	  Unify handling of register survival in old and new register allocator, fixing bug #2195.

2013-07-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/compact-results.py,
	* support/regression/collate-results.py: Also look for "unknown
	   instruction"
	* sim/ucsim/st7.src/st7.cc,
	* sim/ucsim/hc08.src/hc08.cc,
	* sim/ucsim/hc08.src/inst.cc: Change result code for invalid and
	  incomplete instructions so regression tests scripts detect problem.

2013-07-14 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sim/ucsim/stm8.src/stm8.cc: Change result code for invalid and
	  incomplete instructions so regression tests scripts detect problem.

2013-07-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCerr.c:
	  Change message text for warning on variables being dead at their definitions.

2013-07-11 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCClospre.hpp:
	  Fix lospre forwarding.

2013-07-11 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCBBlock.c,
	  src/SDCClrange.c,
	  src/SDCClrange.h,